Update all to Java 11
Change-Id: Ifcacd1d20598803a77ddcd24a0bdf5c42528a14b